--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     margin-top: 5px;
     margin-bottom: 0;
 }
-.quote3 > ul{
+.quote3 > ol{
     list-style-type: upper-roman;
     margin-top: 5px;
     margin-bottom: 0;
